--- a/fullsdktest.html
+++ b/fullsdktest.html
@@ -4,72 +4,245 @@
   <meta charset="UTF-8" />
   <title>LiveAvatar FULL SDK Test</title>
   <style>
+    :root {
+      color-scheme: dark;
+    }
     body {
       font-family: Arial, sans-serif;
       background: #111;
       color: #fff;
+      padding: 24px;
+      max-width: 960px;
+      margin: 0 auto;
+    }
+    h2 {
+      margin-bottom: 8px;
+    }
+    .card {
+      border: 1px solid #333;
+      border-radius: 12px;
       padding: 20px;
+      background: #181818;
+      margin-bottom: 18px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: 600;
+    }
+    input, select, button {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 12px 14px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: 1px solid #2c2c2c;
+      background: #141414;
+      color: #fff;
+    }
+    input:focus, select:focus, button:focus {
+      outline: 2px solid #32a3ff;
+      border-color: #32a3ff;
     }
     button {
-      padding: 12px 20px;
-      font-size: 16px;
       cursor: pointer;
+      font-weight: 700;
+      background: linear-gradient(135deg, #3f8cff, #1ac8f5);
+      border: none;
+      transition: transform 0.1s ease, box-shadow 0.2s ease;
+    }
+    button:disabled {
+      cursor: not-allowed;
+      opacity: 0.6;
+      box-shadow: none;
+      transform: none;
+    }
+    button:hover:not(:disabled) {
+      transform: translateY(-1px);
+      box-shadow: 0 12px 30px rgba(50,163,255,0.3);
     }
     pre {
-      background: #222;
-      padding: 10px;
-      margin-top: 15px;
+      background: #0f0f0f;
+      border: 1px solid #222;
+      padding: 14px;
+      margin-top: 12px;
       white-space: pre-wrap;
+      border-radius: 10px;
+      max-height: 420px;
+      overflow: auto;
+      font-size: 14px;
+      line-height: 1.4;
+    }
+    .row {
+      display: grid;
+      gap: 12px;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      margin-bottom: 8px;
+    }
+    .tag {
+      display: inline-block;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid #2c2c2c;
+      margin-right: 6px;
+      font-size: 13px;
+      color: #c5c5c5;
+    }
+    .tips {
+      color: #c9d4e0;
+      font-size: 14px;
+      line-height: 1.6;
+    }
+    code {
+      background: #161616;
+      padding: 2px 6px;
+      border-radius: 6px;
+      border: 1px solid #222;
     }
   </style>
 </head>
 <body>
 
 <h2>LiveAvatar FULL SDK Test</h2>
+<div class="card">
+  <div class="tips">
+    1) Вставьте свои ключ и идентификаторы. <br/>
+    2) Нажмите <strong>Start FULL Session</strong> — если запрос вернулся 200 OK, внизу появится <code>session_id</code>. <br/>
+    3) Этим <code>session_id</code> подключайтесь из SDK/WebSocket и получайте транскрипцию.
+  </div>
+</div>
 
-<button id="startSession">▶ Start FULL Session</button>
+<div class="card">
+  <div class="row">
+    <div>
+      <label for="apiKey">API Key</label>
+      <input id="apiKey" type="text" value="a6b7985a-c4da-11f0-a99e-066a7fa2e369" autocomplete="off" />
+    </div>
+    <div>
+      <label for="mode">Mode</label>
+      <select id="mode">
+        <option value="FULL" selected>FULL</option>
+        <option value="LITE">LITE</option>
+        <option value="STREAMING">STREAMING</option>
+      </select>
+    </div>
+  </div>
+  <div class="row">
+    <div>
+      <label for="avatarId">avatar_id</label>
+      <input id="avatarId" type="text" value="bf00036b-558a-44b5-b2ff-1e3cec0f4ceb" autocomplete="off" />
+    </div>
+    <div>
+      <label for="contextId">context_id</label>
+      <input id="contextId" type="text" value="01bf4d22-1fda-444f-9e2c-a23494aa2fc2" autocomplete="off" />
+    </div>
+  </div>
+  <button id="startSession">▶ Start FULL Session</button>
+  <pre id="log"></pre>
+</div>
 
-<pre id="log"></pre>
+<div class="card tips">
+  <div class="tag">Требуется HTTPS или localhost</div>
+  <div class="tag">CORS: используйте через dev-сервер или прокси</div>
+  <p>
+    Если кнопка даёт ошибку CORS/Network: запустите локальный сервер (<code>npx serve .</code> или
+    <code>python -m http.server 8080</code>) и откройте страницу как <code>http://localhost:8080/fullsdktest.html</code>.
+    Запрос можно проверить в терминале тем же телом через <code>curl</code> — так можно убедиться, что ключ и ID корректны.
+  </p>
+  <pre id="curl"></pre>
+</div>
+
+<div class="card tips">
+  <h3>Чек-лист: как протестировать и получить тестовую транскрипцию</h3>
+  <ol>
+    <li>Запустите локальный сервер (например, <code>python -m http.server 8080</code>) и откройте страницу как
+      <code>http://localhost:8080/fullsdktest.html</code> или по HTTPS‑домену.</li>
+    <li>Вставьте <strong>API Key</strong>, <strong>avatar_id</strong>, <strong>context_id</strong> и нажмите
+      <strong>Start FULL Session</strong>. В логе должен появиться <code>session_id</code>.</li>
+    <li>Скопируйте <code>session_id</code> и в своем приложении подключитесь к нему через официальный SDK/WebSocket
+      от Heigen: авторизуйтесь тем же ключом, используйте session_id для подключения аудио и подпишитесь на события
+      транскрипции (обычно типы событий <code>transcript</code>/<code>asr_result</code> или аналогичные, смотрите документацию SDK).</li>
+    <li>Подайте тестовый аудиопоток (или микрофон) через SDK и убедитесь, что в событиях/колбэках приходят текстовые
+      фрагменты. Если не приходит, проверьте права ключа, соответствие avatar/context и логи сети в консоли.</li>
+    <li>Для изоляции проблем можно повторить запрос создания сессии через показанный ниже <code>curl</code>: если он
+      возвращает 200 OK с <code>session_id</code>, то сетевой стек браузера или CORS — основная точка проверки.</li>
+  </ol>
+</div>
 
 <script>
-const API_KEY = "a6b7985a-c4da-11f0-a99e-066a7fa2e369";
-const AVATAR_ID = "bf00036b-558a-44b5-b2ff-1e3cec0f4ceb";
-const CONTEXT_ID = "01bf4d22-1fda-444f-9e2c-a23494aa2fc2";
+const logBox = document.getElementById("log");
+const curlBox = document.getElementById("curl");
 
 const log = (msg) => {
-  document.getElementById("log").textContent += msg + "\n";
+  logBox.textContent += msg + "\n";
+  logBox.scrollTop = logBox.scrollHeight;
 };
 
-document.getElementById("startSession").onclick = async () => {
-  log("Starting FULL session...");
+const buildPayload = () => ({
+  avatar_id: document.getElementById("avatarId").value.trim(),
+  context_id: document.getElementById("contextId").value.trim(),
+  mode: document.getElementById("mode").value
+});
 
-  const response = await fetch("https://api.liveavatar.com/v1/sessions", {
-    method: "POST",
-    headers: {
-      "Authorization": `Bearer ${API_KEY}`,
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify({
-      avatar_id: AVATAR_ID,
-      context_id: CONTEXT_ID,
-      mode: "FULL"
-    })
-  });
+const refreshCurl = () => {
+  const payload = buildPayload();
+  const body = JSON.stringify(payload, null, 2);
+  const key = document.getElementById("apiKey").value.trim();
+  curlBox.textContent = `curl -X POST \
+  https://api.liveavatar.com/v1/sessions \
+  -H "Authorization: Bearer ${key}" \
+  -H "Content-Type: application/json" \
+  -d '${body}'`;
+};
 
-  const data = await response.json();
+refreshCurl();
+document.querySelectorAll("input, select").forEach((el) => {
+  el.addEventListener("input", refreshCurl);
+  el.addEventListener("change", refreshCurl);
+});
 
-  if (!response.ok) {
-    log("ERROR:");
+document.getElementById("startSession").onclick = async (event) => {
+  const button = event.currentTarget;
+  logBox.textContent = "";
+  button.disabled = true;
+  log(`⏳ Запускаю ${document.getElementById("mode").value} сессию...`);
+
+  try {
+    const payload = buildPayload();
+    const response = await fetch("https://api.liveavatar.com/v1/sessions", {
+      method: "POST",
+      headers: {
+        "Authorization": `Bearer ${document.getElementById("apiKey").value.trim()}`,
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify(payload)
+    });
+
+    let data;
+    try {
+      data = await response.json();
+    } catch (parseError) {
+      log("❌ Ошибка парсинга ответа (возможно HTML/текст вместо JSON)");
+      log(String(parseError));
+      return;
+    }
+
+    if (!response.ok) {
+      log("❌ Ошибка запроса:");
+      log(JSON.stringify(data, null, 2));
+      return;
+    }
+
+    log("✅ SESSION CREATED");
     log(JSON.stringify(data, null, 2));
-    return;
+    log("Сохраните session_id → подключайтесь SDK/WebSocket для аудио и транскриптов.");
+  } catch (error) {
+    log("❌ Network/JS error:");
+    log(String(error));
+  } finally {
+    button.disabled = false;
   }
-
-  log("SESSION CREATED:");
-  log(JSON.stringify(data, null, 2));
-
-  // ВАЖНО
-  log("SAVE session_id:");
-  log(data.session_id);
 };
 </script>
 
